--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Build with Maven
         run: mvn clean compile
   security-check:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    needs: compile
     steps:
       - name: checkout code
         uses: actions/checkout@v4
@@ -38,5 +39,20 @@ jobs:
         run: sudo apt install gitleaks -y
       - name: gitleaks code scan
         run: gitleaks detect -s . -r gitleaks-report.json -f json
+  test:
+    runs-on: self-hosted
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Test cases
+        run: mvn test
+    
+  
         
 
