--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -75,6 +75,33 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  build_docker_image_push:
+    runs-on: self-hosted
+    needs: build_sonarscan
+    steps:
+    - uses: actions/checkout@v4
+    - name: download artifact
+      uses: download/artifact@v4
+      with:
+        name: app-jar
+        path: app
+    - name: docker login
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ vars.DOCKERHUB_TOKEN }}
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+          context: .
+          push: true
+          tags: mallelas571/bankapp:latest
+        
+          
           
       
       
