--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -81,7 +81,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: download artifact
-      uses: download/artifact@v4
+      uses: actions/download-artifact@v4
       with:
         name: app-jar
         path: app
