--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -71,7 +71,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-jar
-          path: app
+          path: target/*.jar
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
